<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.edu.cdu.boris.fiveqadricsurfaces.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:text="@string/SurfCaption"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btnEllipsoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:clickable="true"
                android:text="@string/EllipsoidCaption" />

            <RadioButton
                android:id="@+id/btnOneHyperboloid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/OneHyperboloidCaption" />

            <RadioButton
                android:id="@+id/btnTwoHyperboloid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/TwoHyperboloidCaptions" />

            <RadioButton
                android:id="@+id/btnEllipticParaboloid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/EllipticParaboloidCaption" />

            <RadioButton
                android:id="@+id/btnHyperbolicParaboloid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/HyperbolicParaboloidCaption" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ParamSurface"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgDescription"
            android:src="@drawable/ellipisoid"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/surface_equation"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <io.github.kexanie.library.MathView
            android:id="@+id/mvFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            auto:engine="KaTeX"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnViewDetail"
            android:layout_marginTop="10dp" />


    </LinearLayout>
</ScrollView>